<resources>
    <string name="app_name">CakeAndBake</string>
    <string name="title_activity_menu_usuario">Menu_usuario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pasteleria</string>
    <string name="nav_header_subtitle">Cake&amp;Bake</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_saludos">¡Hola Usuario!</string>
    <string name="nav_header_bienvenido">Bienvenido a la pastelería</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_perfil">Mi Perfil</string>
    <string name="menu_pedido">Mis pedidos</string>
    <string name="menu_contacto">Contactanos</string>
    <string name="logo">Logo</string>
    <string name="pasteleria_cake_and_bake"><![CDATA[Pasteleria Cake&Bake]]></string>
    <string name="hola_usuario">¡Hola Usuario!</string>
    <string name="texto_de_compra">Elige cómo quieres comprar</string>
    <string name="menu">Menu</string>
    <string name="ingrese_una_direccion">Ingrese una dirección</string>
    <string name="usar_ubicacion_actual">Usar ubicación actual</string>
    <string name="btnguardar">Guardar</string>
</resources>