<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_title"
            android:fontFamily="@font/sunflower"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="111.5dp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sunflower"
            android:layout_marginLeft="110dp"
            android:textColor="@color/white"
            android:text="@string/nav_header_subtitle" />

        <TextView
            android:id="@+id/textview_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_saludos"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:fontFamily="@font/sunflower"/>

        <TextView
            android:id="@+id/textview_bienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_bienvenido"
            android:layout_marginTop="115dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:fontFamily="@font/sunflower"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="60dp"
            android:background="#FFFFFFFF"
            android:src="@drawable/baseline_person_24"
            tools:ignore="DuplicateIds" />


    </RelativeLayout>

</LinearLayout>